// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Plugin Card snapshot Card no props 1`] = `
<div
  class="ant-card ant-card-bordered"
>
  <div
    class="ant-card-body"
  >
    children
  </div>
</div>
`;

exports[`render Plugin Card snapshot Card props 1`] = `
<div
  class="ant-card ant-card-bordered"
>
  <div
    class="ant-card-head"
  >
    <div
      class="ant-card-head-wrapper"
    >
      <div
        class="ant-card-head-title"
      >
        Head
      </div>
    </div>
  </div>
  <div
    class="ant-card-body"
  >
    children
  </div>
</div>
`;

exports[`render Plugin Text snapshot Text no props 1`] = `
<span
  class="ant-typography"
>
  children
</span>
`;

exports[`render Plugin Text snapshot Text props 1`] = `
<span
  class="ant-typography ant-typography-danger"
>
  children
</span>
`;

exports[`render Plugin div snapshot has children className 1`] = `
<div
  class="testDiv"
>
  test
</div>
`;

exports[`render Plugin div snapshot no children 1`] = `null`;
